# django27

./: .gitignore  manage.py  pyproject.toml  pytest.ini.py
authentication/: models.py  serializers.py  urls.py  views.py
companies/: urls.py  views.py
django27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/vacancies/: vacancy_create_test.py  vacancy_detail_test.py  vacancy_list_test.py
vacancies/: models.py  permissions.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py
